@@ -60,6 +60,7 @@ from ImageGadgetTest import ImageGadgetTest
 from StandardNodeGadgetTest import StandardNodeGadgetTest
 from ColorSwatchTest import ColorSwatchTest
 from VariantTest import VariantTest
+from GridContainerTest import GridContainerTest
 
 if __name__ == "__main__":
 	unittest.main()
