@@ -1,3 +1,5 @@
+* Added a GridContainer class.
+
 0.14.0
 ------
 
